FACES-1896 Develop alloy:button, alloy:commandButton, and alloy:icon component (Added immediate use case for commandButton.)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -1,3 +1,5 @@
+actionlistener-execution-when-immediate-is-false=ActionListener execution when [vdldoc:alloy:commandButton:immediate] is `false` (the default)
+actionlistener-execution-when-immediate-is-true=ActionListener execution when [vdldoc:alloy:commandButton:immediate] is `true`
 are-you-sure-you-want-to-delete-this=Are you sure you want to delete this?
 alloy-button=[javadoc:com.liferay.faces.alloy.component.button.Button] is a [javadoc:javax.faces.component.UIOutput] component that renders a styleable HTML `&lt;button&gt;` element. The default [vdldoc:alloy:button:type] is `button`. Since it extends [javadoc:javax.faces.component.html.HtmlOutcomeTargetButton], it supports all the features of [vdldoc:h:button]. The component does *not need to be a child* of `h:form` since the [vdldoc:alloy:button:outcome] attribute is designed to navigate via HTTP GET.
 alloy-button-general=*Children* such as [vdldoc:alloy:icon], [vdldoc:alloy:outputText], and [vdldoc:h:graphicImage] can be specified for styling purposes. Alternatively, the [vdldoc:alloy:button:image] and [vdldoc:alloy:button:value] attributes can be specified for styling purposes.
@@ -12,6 +14,7 @@ alloy-commandbutton-general=*Children* such as [vdldoc:alloy:icon], [vdldoc:allo
 alloy-commandbutton-general-example-1=Styling via children
 alloy-commandbutton-general-example-2=Styling via [vdldoc:alloy:commandbutton:image] attribute
 alloy-commandbutton-general-example-3=Styling via [vdldoc:alloy:commandbutton:value] attribute
+alloy-commandbutton-immediate=When the [vdldoc:alloy:commandButton:immediate] attribute is `true`, the [vdldoc:alloy:commandButton:action] and [vdldoc:alloy:commandButton:actionListener] callbacks execute during the *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal INVOKE_APPLICATION phase.
 alloy-commandbutton-navigation=The component can be used to *navigate* between pages with the [vdldoc:alloy:commandbutton:action] attribute. By specifying a `&lt;redirect&gt;` element in the `navigation-rule`, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandbutton-param=URL *parameters* can be specified via the [vdldoc:alloy:commandbutton:action] attribute. By specifying a `faces-redirect=true` parameter in the action attribute, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandbutton-value-attribute=Although the component&apos;s [vdldoc:alloy:commandButton:value] attribute is *read-only* (can&apos;t be changed via form submission), it can be used to determine that an item has been selected by the user.
