FACES-1942 Develop alloy:field component

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -19,6 +19,9 @@ alloy-commandbutton-navigation=The component can be used to *navigate* between p
 alloy-commandbutton-param=URL *parameters* can be specified via the [vdldoc:alloy:commandbutton:action] attribute. By specifying a `faces-redirect=true` parameter in the action attribute, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandbutton-value-attribute=Although the component&apos;s [vdldoc:alloy:commandButton:value] attribute is *read-only* (can&apos;t be changed via form submission), it can be used to determine that an item has been selected by the user.
 alloy-commandbutton-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
+alloy-field=[javadoc:com.liferay.faces.alloy.component.field.Field] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element and a `&lt;label&gt;` element in order to wrap a field. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
+alloy-field-general=A *label* can be specified via the [vdldoc:alloy:field:label] attribute. In addition, the [vdldoc:alloy:field:id] attribute is typically referenced by the [vdldoc:f:ajax] tag in order to re-render an input field and a corresponding message.
+alloy-field-general-example-1=Re-rendering a field via [vdldoc:f:ajax].
 alloy-icon=[javadoc:com.liferay.faces.alloy.component.icon.Icon] is a [javadoc:javax.faces.component.UIComponent] that renders a span which contains an icon specified by the [vdldoc:alloy:icon:name] attribute.
 alloy-icon-general=The component displays an *icon* specified by the [vdldoc:alloy:icon:name] attribute. Names are described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#icons" target="_blank">Alloy Base CSS</a> documentation.
 alloy-input-date-benefits-description=since it combines date selection and text input in a single component.
@@ -126,6 +129,7 @@ default-value=Default Value
 dislike=Dislike
 example=Example
 favorite-liferay-benefit=Favorite Liferay Benefit
+field-label=Field Label
 hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
 general=General
 immediate=Immediate
@@ -169,6 +173,7 @@ small=Small
 source-code=Source Code
 sticky-multiple-selection=Sticky Multiple Selection
 submit=Submit
+submit-and-re-render-field=Submit and Re-render Field
 submit-non-faces-postback=Submit Non-Faces Postback
 success=Success
 this-is-column-1=This is column 1 with width="33"
