FACES-1942 Develop alloy:field component (Added feature where field styles itself according the validity of its children or the severity of the messages of its children. Added bootstrap class to the label.)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -22,6 +22,10 @@ alloy-commandbutton-various-styles=The component can be *styled* with Bootstrap 
 alloy-field=[javadoc:com.liferay.faces.alloy.component.field.Field] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element and a `&lt;label&gt;` element in order to wrap a field. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 alloy-field-general=A *label* can be specified via the [vdldoc:alloy:field:label] attribute. In addition, the [vdldoc:alloy:field:id] attribute is typically referenced by the [vdldoc:f:ajax] tag in order to re-render an input field and a corresponding message.
 alloy-field-general-example-1=Re-rendering a field via [vdldoc:f:ajax].
+alloy-field-message-styling=The component will automatically be *styled* according to the most severe message that exists within it.
+alloy-field-message-styling-example-1=`FacesMessage.SEVERITY_INFO`
+alloy-field-message-styling-example-2=`FacesMessage.SEVERITY_WARN`
+alloy-field-message-styling-example-3=`FacesMessage.SEVERITY_ERROR`
 alloy-icon=[javadoc:com.liferay.faces.alloy.component.icon.Icon] is a [javadoc:javax.faces.component.UIComponent] that renders a span which contains an icon specified by the [vdldoc:alloy:icon:name] attribute.
 alloy-icon-general=The component displays an *icon* specified by the [vdldoc:alloy:icon:name] attribute. Names are described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#icons" target="_blank">Alloy Base CSS</a> documentation.
 alloy-input-date-benefits-description=since it combines date selection and text input in a single component.
@@ -127,6 +131,7 @@ description=Description
 default=Default
 default-value=Default Value
 dislike=Dislike
+error=Error
 example=Example
 favorite-liferay-benefit=Favorite Liferay Benefit
 field-label=Field Label
@@ -142,6 +147,7 @@ link=Link
 locale-from-el=locale from EL
 localization=Localization
 max-length-events=Max Length Events
+message-styling=Message Styling
 min-max-date=Min/Max Date
 mini=Mini
 model-value=Model Value
