FACES-1714 Develop Liferay Faces Showcase (rename aui namespace to alloy)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -87,9 +87,9 @@ alloy-pickdate-multiple-selection=The *date selection mode* can be specified via
 alloy-pickdate-multiple-selection-example-1=Hold down shift or control to select multiple dates
 alloy-pickdate-multiple-selection-example-2=Pop up the pickDate multiple times to select multiple dates
 alloy-row=[javadoc:com.liferay.faces.alloy.component.row.Row] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags.
-alloy-row-general=The component takes [vdldoc:aui:column] tags as children in order to layout components in a tabular grid.
-alloy-row-column-width=The *width* of an [vdldoc:aui:column] can be specified via the [vdldoc:aui:column:width] attribute.
-alloy-row-column-offset=The *offset width* of an [vdldoc:aui:column] can be specified via the [vdldoc:aui:column:offsetWidth] attribute.
+alloy-row-general=The component takes [vdldoc:alloy:column] tags as children in order to layout components in a tabular grid.
+alloy-row-column-width=The *width* of an [vdldoc:alloy:column] can be specified via the [vdldoc:alloy:column:width] attribute.
+alloy-row-column-offset=The *offset width* of an [vdldoc:alloy:column] can be specified via the [vdldoc:alloy:column:offsetWidth] attribute.
 alloy-selectoneradio=[javadoc:com.liferay.faces.alloy.component.selectoneradio.SelectOneRadio] is a [javadoc:javax.faces.component.UISelectOne] component that renders radio buttons. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it supports all the features of [vdldoc:h:selectOneRadio] such as accepting [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
 alloy-selectoneradio-conversion=The [vdldoc:alloy:selectOneRadio:value] attribute can be *converted* by specifying an [vdldoc:f:converter] child tag.
 alloy-selectoneradio-data-model=The component will display *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
