FACES-1714 Develop Liferay Faces Showcase (use cases for alloy:message and alloy:messages)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -21,7 +21,7 @@ alloy-commandbutton-value-attribute=Although the component&apos;s [vdldoc:alloy:
 alloy-commandbutton-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
 alloy-field=[javadoc:com.liferay.faces.alloy.component.field.Field] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element and a `&lt;label&gt;` element in order to wrap a field. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 alloy-field-general=A *label* can be specified via the [vdldoc:alloy:field:label] attribute. In addition, the [vdldoc:alloy:field:id] attribute is typically referenced by the [vdldoc:f:ajax] tag in order to re-render an input field and a corresponding message.
-alloy-field-general-example-1=Re-rendering a field via [vdldoc:f:ajax].
+alloy-field-general-example-1=Re-rendering [vdldoc:alloy:field] via [vdldoc:f:ajax].
 alloy-field-message-styling=The component will automatically be *styled* according to the most severe message that exists within it.
 alloy-field-message-styling-example-1=`FacesMessage.SEVERITY_INFO`
 alloy-field-message-styling-example-2=`FacesMessage.SEVERITY_WARN`
@@ -58,6 +58,14 @@ alloy-inputtextarea-size=The *size* of the rendered textarea can be specified vi
 alloy-inputtextarea-size-example-1=Setting the size via the [vdldoc:alloy:inputTextarea:rows] and [vdldoc:alloy:inputTextarea:cols] attributes
 alloy-inputtextarea-size-example-2=Setting the size via the [vdldoc:alloy:inputTextarea:style] attribute
 alloy-inputtextarea-validation=The [vdldoc:alloy:inputTextarea:value] attribute can be *validated* via the [vdldoc:alloy:inputTextarea:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:validatorMessage] attribute.
+alloy-message=[javadoc:com.liferay.faces.alloy.component.message.Message] is a [javadoc:javax.faces.component.UIMessage] component that renders a `&lt;span&gt;` element containing the text of a single [javadoc:javax.faces.application.FacesMessage] for an associated component. Since it extends [javadoc:javax.faces.component.html.HtmlMessage], it supports all the features of [vdldoc:h:message].
+alloy-message-general=The component can be associated with an input component like [vdldoc:alloy:inputText] via the [vdldoc:alloy:message:for] attribute. If it is a child of [vdldoc:alloy:field] then it will be *automatically styled* when validation fails.
+alloy-message-general-example-1=Re-rendering [vdldoc:alloy:message] via [vdldoc:f:ajax]
+alloy-messages=[javadoc:com.liferay.faces.alloy.component.message.Messages] is a [javadoc:javax.faces.component.UIMessages] component that renders the text of one or more [javadoc:javax.faces.application.FacesMessage] instances inside a `&lt;ul&gt;` element or `&lt;table&gt;` element for an associated component, according to the [vdldoc:alloy:messages:layout] attribute. Since it extends [javadoc:javax.faces.component.html.HtmlMessage], it supports all the features of [vdldoc:h:message].
+alloy-messages-general=The component is typically placed inside an [vdldoc:alloy:form] in order to render messages within the context of a form.
+alloy-messages-general-example-1=Render *all* messages in a `&lt;ul&gt;` (the default)
+alloy-messages-general-example-2=Render *all* messages in a `&lt;table&gt;`
+alloy-messages-general-example-3=Render *only global* messages in a `&lt;ul&gt;`
 alloy-outputremainingchars=[javadoc:com.liferay.faces.alloy.component.outputremainingchars.OutputRemainingChars] is a [javadoc:javax.faces.component.UIOutput] component that displays the number of characters remaining for an associated [vdldoc:alloy:inputText] or [vdldoc:alloy:inputTextarea].
 alloy-outputremainingchars-general=The [vdldoc:alloy:outputRemainingChars:value] attribute can contain text with a `{0}` token that is substituted with the number of remaining characters. If the `value` attribute is not specified, then only the number of remaining characters are rendered.
 alloy-outputremainingchars-general-example-1=Associate with an [vdldoc:alloy:inputText] and specify a `{0}` token within the [vdldoc:alloy:outputRemainingChars:value] attribute.
@@ -181,8 +189,10 @@ source-code=Source Code
 sticky-multiple-selection=Sticky Multiple Selection
 submit=Submit
 submit-and-re-render-field=Submit and Re-render Field
+submit-and-re-render-form=Submit and Re-render Form
 submit-non-faces-postback=Submit Non-Faces Postback
 success=Success
+text-field=Text Field
 this-is-column-1=This is column 1 with width="33"
 this-is-column-2=This is column 2 with width="33"
 this-is-column-3=This is column 3 with width="33"
