--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -7,6 +7,8 @@ alloy_inputDate=general:inputDate.xhtml,InputDateModelBean.java|instant-ajax:inp
 alloy_inputSourceCode=general:inputSourceCode.xhtml,InputSourceCodeModelBean.java,InputSourceCodeBackingBean.java|default-value:inputSourceCode.xhtml,InputSourceCodeModelBean.java,InputSourceCodeBackingBean.java
 alloy_inputText=general:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java|conversion:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java|immediate:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java|validation:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java
 alloy_inputTextarea=general:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|conversion:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|immediate:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|validation:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|right-to-left:inputTextarea.xhtml|size:inputTextarea.xhtml
+alloy_message=general:message.xhtml,MessageBackingBean.java
+alloy_messages=general:messages.xhtml,MessageBackingBean.java
 alloy_outputRemainingChars=general:outputRemainingChars.xhtml,OutputRemainingCharsModelBean.java|default-value:outputRemainingChars.xhtml|max-length-events:outputRemainingChars.xhtml
 alloy_outputText=general:outputText.xhtml,OutputTextModelBean.java|conversion:outputText.xhtml,OutputTextModelBean.java|right-to-left:outputText.xhtml
 alloy_panelGroup=general:panelGroup.xhtml
