FACES-1894 Add general utilities for Liferay Faces Alloy Components (automatically determine value of "label" attribute according to parent alloy:field or sibling alloy:outputLabel)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18nFaces.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18nFaces.properties
@@ -1,2 +1,4 @@
-javax.faces.component.UIInput.REQUIRED=Value is required
-javax.faces.converter.DateTimeConverter.DATE=Invalid date format
+javax.faces.component.UIInput.CONVERSION={0}: Conversion error
+javax.faces.component.UIInput.REQUIRED={0}: Value is required
+javax.faces.component.UISelectOne.INVALID={0}: Value is not valid
+javax.faces.component.UISelectMany.INVALID={0}: Value is not valid
