FACES-1714 Develop Liferay Faces Showcase (added general use-case for alloy:dataTable)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -19,6 +19,8 @@ alloy-commandbutton-navigation=The component can be used to *navigate* between p
 alloy-commandbutton-param=URL *parameters* can be specified via the [vdldoc:alloy:commandbutton:action] attribute. By specifying a `faces-redirect=true` parameter in the action attribute, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandbutton-value-attribute=Although the component&apos;s [vdldoc:alloy:commandButton:value] attribute is *read-only* (can&apos;t be changed via form submission), it can be used to determine that an item has been selected by the user.
 alloy-commandbutton-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
+alloy-datatable=[javadoc:com.liferay.faces.alloy.component.datatable.DataTable] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders a `table` element with tabular data and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags. Since it extends [javadoc:javax.faces.component.html.HtmlDataTable], it supports all the features of [vdldoc:h:dataTable].
+alloy-datatable-general=The [vdldoc:alloy:dataTable:value] attribute tag must be bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:dataTable:var] attribute is used to introduce a variable name into the EL when iterating over the model.
 alloy-field=[javadoc:com.liferay.faces.alloy.component.field.Field] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element and a `&lt;label&gt;` element in order to wrap a field. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 alloy-field-general=A *label* can be specified via the [vdldoc:alloy:field:label] attribute. In addition, the [vdldoc:alloy:field:id] attribute is typically referenced by the [vdldoc:f:ajax] tag in order to re-render an input field and a corresponding message.
 alloy-field-general-example-1=Re-rendering [vdldoc:alloy:field] via [vdldoc:f:ajax].
@@ -132,8 +134,11 @@ conversion=Conversion
 conversion-to-a-date-using-converter-attribute=Conversion to a [javadoc:java.util.Date] using the [vdldoc:alloy:inputTextarea:converter] attribute
 conversion-to-a-date-using-f-convertdatetime=Conversion to a [javadoc:java.util.Date] using an [vdldoc:f:convertDateTime] child tag
 converter-message=Failed to convert this field
+country=Country
+customers=Customers
 danger=Danger
 data-model=Data Model
+date-of-birth=Date of Birth
 date-pattern=Date Pattern
 description=Description
 default=Default
@@ -144,6 +149,7 @@ example=Example
 favorite-liferay-benefit=Favorite Liferay Benefit
 field-label=Field Label
 fieldset-legend=Fieldset Legend
+first-name=First Name
 hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
 general=General
 immediate=Immediate
@@ -151,6 +157,7 @@ info=Info
 instant-ajax=Instant Ajax
 inverse=Inverse
 large=Large
+last-name=Last Name
 like=Like
 link=Link
 locale-from-el=locale from EL
