--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -1,5 +1,6 @@
 alloy_button=general:button.xhtml|navigation:button.xhtml,navigation-rule.xml|param:button.xhtml|various-styles:button.xhtml
 alloy_commandButton=general:commandButton.xhtml|immediate:commandButton.xhtml,CommandButtonBackingBean.java|navigation:commandButton.xhtml,navigation-rule.xml|param:commandButton.xhtml|various-styles:commandButton.xhtml|value-attribute:commandButton.xhtml,CommandButtonModelBean.java,CommandButtonBackingBean.java,Customer.java
+alloy_dataTable=general:dataTable.xhtml,DataTableModelBean.java,DataTableBackingBean.java
 alloy_field=general:field.xhtml|message-styling:field.xhtml,FieldBackingBean.java
 alloy_fieldset=general:fieldset.xhtml
 alloy_icon=general:icon.xhtml
