FACES-1714 Develop Liferay Faces Showcase (general use case for alloy:panelGrid)

--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -12,6 +12,7 @@ alloy_message=general:message.xhtml,MessageBackingBean.java
 alloy_messages=general:messages.xhtml,MessageBackingBean.java
 alloy_outputRemainingChars=general:outputRemainingChars.xhtml,OutputRemainingCharsModelBean.java|default-value:outputRemainingChars.xhtml|max-length-events:outputRemainingChars.xhtml
 alloy_outputText=general:outputText.xhtml,OutputTextModelBean.java|conversion:outputText.xhtml,OutputTextModelBean.java|right-to-left:outputText.xhtml
+alloy_panelGrid=general:panelGrid.xhtml
 alloy_panelGroup=general:panelGroup.xhtml
 alloy_pickDate=general:pickDate.xhtml,PickDateModelBean.java|instant-ajax:pickDate.xhtml,PickDateModelBean.java|date-pattern:pickDate.xhtml,PickDateModelBean.java|localization:pickDate.xhtml,PickDateModelBean.java|min-max-date:pickDate.xhtml,PickDateModelBean.java|multiple-panes:pickDate.xhtml,PickDateModelBean.java|multiple-selection:pickDate.xhtml,PickDateModelBean.java
 alloy_row=general:row.xhtml|column-width:row.xhtml|column-offset:row.xhtml
