--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -80,6 +80,8 @@ alloy-outputtext=[javadoc:com.liferay.faces.alloy.component.outputtext.OutputTex
 alloy-outputtext-general=The [vdldoc:alloy:outputText:value] attribute can be *bound* to a model bean property via EL.
 alloy-outputtext-conversion=The [vdldoc:alloy:outputText:value] attribute can be *converted* by specifying an [vdldoc:f:converter] type of child tag.
 alloy-outputtext-right-to-left=The component supports *Right-To-Left* language input by setting the [vdldoc:alloy:outputText:dir] and [vdldoc:alloy:outputText:lang] attributes.
+alloy-panelgrid=[javadoc:com.liferay.faces.alloy.component.panelgrid.PanelGrid] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;table&gt;` element to layout its children in a tabular grid. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGrid], it supports all the features of [vdldoc:h:panelGrid].
+alloy-panelgrid-general=The [vdldoc:alloy:panelGrid:columns] attribute specifies how many table columns are rendered. A new table row will be rendered if the number of children exceeds the number of columns.
 alloy-panelgroup=[javadoc:com.liferay.faces.alloy.component.panelgroup.PanelGroup] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;span&gt;` or a `&lt;div&gt;` element for grouping purposes. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 alloy-panelgroup-general=The [vdldoc:alloy:panelGroup:layout] attribute specifies whether the component renders a `span` or a `div`.
 alloy-panelgroup-general-example-1=By default, the component renders a `span`.
