FACES-1894 Add general utilities for Liferay Faces Alloy Components (change components-ext.xml to prepare for generator refactor)

--- a/alloy/generator.properties
+++ b/alloy/generator.properties
@@ -17,248 +17,59 @@ builder.faces.taglib.xml.output.dir=src/main/resources/META-INF
 builder.faces.version=3.2.5-ga6
 builder.faces.default.alloy.renderer.parent.class=com.liferay.faces.alloy.renderkit.AlloyRendererBase
 builder.faces.component.default.parent.class=javax.faces.component.UIComponentBase
-builder.namespace=widget
 
-# This list is a list of attributes which have the same name but different meanings in JSF and Alloy. The
-# alloy-generator will resolve this name conflict by appending the value of builder.namespace to the beginning of the
-# attribute's name in methods and constants. If builder.namespace is not defined, then the component's name will be
-# appended to the beginning of the attribute's name instead.
-builder.namespaced.attributes=\
+# Attributes do not need to be namespaced because they are all manually chosen.
+builder.namespaced.attributes=
+
+builder.java.reserved.words=\
+	abstract,\
+	assert,\
+	boolean,\
+	break,\
+	byte,\
+	case,\
+	catch,\
+	char,\
+	class,\
+	const,\
+	continue,\
+	default,\
+	do,\
+	double,\
+	else,\
+	enum,\
+	extends,\
+	final,\
+	finally,\
 	first,\
-	lang,\
-	render,\
-	styleClass,\
-	widgetVar,\
-	attributes,\
-	childCount,\
-	children,\
-	clientBehaviors,\
-	clientId,\
-	compositeComponent,\
-	compositeComponentParent,\
-	containerClientId,\
-	convertedValue,\
-	converterMessage,\
-	currentComponent,\
-	currentCompositeComponent,\
-	defaultEventName,\
-	empty,\
-	eventNames,\
-	facesContext,\
-	facesListener,\
-	facet,\
-	facetCount,\
-	facets,\
-	facetsAndChildren,\
-	family,\
-	id,\
-	immediate,\
-	inView,\
-	listenersForEventClass,\
-	localValue,\
-	localValueSet,\
-	namingContainer,\
-	parent,\
-	rendered,\
-	renderer,\
-	rendererType,\
-	rendersChildren,\
-	required,\
-	requiredMessage,\
-	resourceBundleMap,\
-	stateHelper,\
-	submittedValue,\
+	float,\
+	for,\
+	goto,\
+	if,\
+	implements,\
+	import,\
+	instanceof,\
+	int,\
+	interface,\
+	long,\
+	native,\
+	new,\
+	package,\
+	private,\
+	protected,\
+	public,\
+	return,\
+	short,\
+	static,\
+	strictfp,\
+	super,\
+	switch,\
+	synchronized,\
+	this,\
+	throw,\
+	throws,\
 	transient,\
-	value,\
-	valid,\
-	validator,\
-	validatorMessage,\
-	validators,\
-	valueBinding,\
-	valueChangeListener,\
-	valueChangeListeners,\
-	valueExpression,\
-	visitable
-
-##
-## Transformer
-##
-default.javascript.type=Object
-
-transformer.comments.included=\
-	AceEditor,\
-	DatePicker,\
-	CharCounter,\
-	Rating,\
-	TabView,\
-	ThumbRating
-
-# Every time this list changes, you must regenerate the data.xml file by running:
-# mvn generate-sources -P generate-xml
-transformer.components.excluded=\
-	Aria,\
-	ArraySort,\
-	Audio,\
-	AutoCompleteBase,\
-	AutoCompleteList,\
-	AutosizeIframe,\
-	AvailableField,\
-	BaseCellEditor,\
-	BaseOptionsCellEditor,\
-	Boolean,\
-	Button,\
-	ButtonCore,\
-	ButtonExt,\
-	ButtonGroup,\
-	ButtonItem,\
-	ButtonSearchCancel,\
-	Carousel,\
-	CellEditorSupport,\
-	CheckboxCellEditor,\
-	Col,\
-	ColorPalette,\
-	ColorPicker,\
-	ColorPickerBase,\
-	ColorPickerPopover,\
-	Component,\
-	Connector,\
-	DataTable.CellEditorSupport,\
-	DataTableHighlight,\
-	DataTableSelection,\
-	DataType,\
-	DataType.String,\
-	Date,\
-	DateCellEditor,\
-	DateMath,\
-	DateParser,\
-	DatePickerBase,\
-	DatePickerDelegate,\
-	DatePickerNative,\
-	DatePickerNativeBase,\
-	DatePickerPopover,\
-	DatePickerSelect,\
-	DatepickerManager,\
-	DelayedTask,\
-	DiagramBuilder,\
-	DiagramBuilderBase,\
-	DiagramNode,\
-	DiagramNodeCondition,\
-	DiagramNodeEnd,\
-	DiagramNodeFork,\
-	DiagramNodeJoin,\
-	DiagramNodeManager,\
-	DiagramNodeManagerBase,\
-	DiagramNodeStart,\
-	DiagramNodeState,\
-	DiagramNodeTask,\
-	DropDownCellEditor,\
-	Editable,\
-	Field,\
-	FieldSupport,\
-	Fieldset,\
-	FormBuilder,\
-	FormBuilderAvailableField,\
-	FormBuilderButtonField,\
-	FormBuilderCheckBoxField,\
-	FormBuilderField,\
-	FormBuilderFieldBase,\
-	FormBuilderFieldsetField,\
-	FormBuilderFileUploadField,\
-	FormBuilderMultipleChoiceField,\
-	FormBuilderRadioField,\
-	FormBuilderSelectField,\
-	FormBuilderTextAreaField,\
-	FormBuilderTextField,\
-	FormValidator,\
-	Freemarker,\
-	HSVAPalette,\
-	HSVAPaletteModal,\
-	HSVPalette,\
-	HTML5,\
-	HashMap,\
-	HashSet,\
-	io,\
-	IORequest,\
-	ImageCropper,\
-	ImageGallery,\
-	ImageViewer,\
-	LinkedSet,\
-	LiveSearch,\
-	LoadingMask,\
-	MediaViewerPlugin,\
-	Modal,\
-	Node,\
-	NodeList,\
-	OptionsEditor,\
-	OverlayBase,\
-	OverlayContext,\
-	OverlayContextManager,\
-	OverlayContextPanel,\
-	OverlayContextPanelManager,\
-	OverlayManager,\
-	OverlayMask,\
-	Pagination,\
-	Palette,\
-	ParseContent,\
-	Plugin.IO,\
-	Popover,\
-	ProgressBar,\
-	PropertyList,\
-	RadioCellEditor,\
-	Resize,\
-	Row,\
-	Scheduler,\
-	SchedulerAgendaView,\
-	SchedulerBase,\
-	SchedulerCalendar,\
-	SchedulerDayView,\
-	SchedulerEvent,\
-	SchedulerEventRecorder,\
-	SchedulerEventSupport,\
-	SchedulerEvents,\
-	SchedulerMonthView,\
-	SchedulerTableView,\
-	SchedulerTableViewDD,\
-	SchedulerView,\
-	SchedulerWeekView,\
-	Selector,\
-	SortableLayout,\
-	SortableList,\
-	String,\
-	Tab,\
-	TemplateProcessor,\
-	TernarySearchNode,\
-	TernarySearchTree,\
-	TextAreaCellEditor,\
-	TextCellEditor,\
-	Textboxlist,\
-	TimePicker,\
-	TimePickerBase,\
-	ToggleButton,\
-	Toggler,\
-	TogglerDelegate,\
-	Toolbar,\
-	ToolbarRenderer,\
-	Tooltip,\
-	TooltipDelegate,\
-	TreeData,\
-	TreeNode,\
-	TreeNodeCheck,\
-	TreeNodeIO,\
-	TreeNodeRadio,\
-	TreeNodeTask,\
-	TreeView,\
-	TreeViewDD,\
-	TreeViewIO,\
-	TreeViewPaginator,\
-	Url,\
-	Velocity,\
-	Video,\
-	WidgetCssClass,\
-	WidgetPositionAlignSuggestion,\
-	WidgetToggle,\
-	WidgetToolbars,\
-	WidgetTrigger
-
-transformer.input.json=${HOME}/.alloyui/alloy-build/alloy-ui-2.0.0-deprecated/api/data.json
-transformer.output.xml=${HOME}/.alloyui/data.xml
+	try,\
+	void,\
+	volatile,\
+	while
