FACES-1714 Develop Liferay Faces Showcase (Re-add description for alloy:fieldset, rename references from datePicker to pickDate.)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -28,6 +28,8 @@ alloy-field-message-styling=The component will automatically be *styled* accordi
 alloy-field-message-styling-example-1=`FacesMessage.SEVERITY_INFO`
 alloy-field-message-styling-example-2=`FacesMessage.SEVERITY_WARN`
 alloy-field-message-styling-example-3=`FacesMessage.SEVERITY_ERROR`
+alloy-fieldset=[javadoc:com.liferay.faces.alloy.component.fieldset.Fieldset] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;fieldset&gt;` element in order to group form elements.
+alloy-fieldset-general=A *header* for the component can be specified via the [vdldoc:alloy:fieldset:legend] attribute.
 alloy-icon=[javadoc:com.liferay.faces.alloy.component.icon.Icon] is a [javadoc:javax.faces.component.UIComponent] that renders a span which contains an icon specified by the [vdldoc:alloy:icon:name] attribute.
 alloy-icon-general=The component displays an *icon* specified by the [vdldoc:alloy:icon:name] attribute. Names are described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#icons" target="_blank">Alloy Base CSS</a> documentation.
 alloy-input-date-benefits-description=since it combines date selection and text input in a single component.
