FACES-1714 Develop Liferay Faces Showcase (Added explanation that inputDate does not have multiple selection feature. Changed quotes to backticks (code) in multiple selection description for pickDate.)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -97,7 +97,7 @@ alloy-pickdate-localization-example-1=Hard coded Brazilian Portuguese locale
 alloy-pickdate-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
 alloy-pickdate-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:alloy:pickDate:minimumDate] and [vdldoc:alloy:pickDate:maximumDate] attributes.
 alloy-pickdate-multiple-panes=The number of month *panes* that are displayed can be specified via the [vdldoc:alloy:pickDate:panes] attribute (maximum of 3).
-alloy-pickdate-multiple-selection=The *date selection mode* can be specified via the [vdldoc:alloy:pickDate:selectionMode] attribute. Valid values include "single" (the default), "multiple," or "multiple-sticky." The character(s) separating the selected dates can be specified via the [vdldoc:alloy:pickDate:dateSeparator] attribute.
+alloy-pickdate-multiple-selection=The *date selection mode* can be specified via the [vdldoc:alloy:pickDate:selectionMode] attribute. Valid values include `single` (the default), `multiple,` or `multiple-sticky`. The character(s) separating the selected dates can be specified via the [vdldoc:alloy:pickDate:dateSeparator] attribute.
 alloy-pickdate-multiple-selection-example-1=Hold down shift or control to select multiple dates
 alloy-pickdate-multiple-selection-example-2=Pop up the pickDate multiple times to select multiple dates
 alloy-row=[javadoc:com.liferay.faces.alloy.component.row.Row] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags.
@@ -175,6 +175,7 @@ multiple-panes=Multiple Panes
 multiple-selection=Multiple Selection
 navigation=Navigation
 note=Note
+note-multiple-selection-not-available-in-inputdate=*Note:* Multiple selection is not available in [vdldoc:alloy:inputDate].
 param=Param
 parameter-value=Parameter Value
 please-consider-using=Please consider using
