FACES-1714 Develop Liferay Faces Showcase (Added explanation that inputDate does not have multiple selection feature. Changed quotes to backticks (code) in multiple selection description for pickDate.)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -32,7 +32,7 @@ alloy-fieldset=[javadoc:com.liferay.faces.alloy.component.fieldset.Fieldset] is 
 alloy-fieldset-general=A *header* for the component can be specified via the [vdldoc:alloy:fieldset:legend] attribute.
 alloy-icon=[javadoc:com.liferay.faces.alloy.component.icon.Icon] is a [javadoc:javax.faces.component.UIComponent] that renders a span which contains an icon specified by the [vdldoc:alloy:icon:name] attribute.
 alloy-icon-general=The component displays an *icon* specified by the [vdldoc:alloy:icon:name] attribute. Names are described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#icons" target="_blank">Alloy Base CSS</a> documentation.
-alloy-input-date-benefits-description=since it combines date selection and text input in a single component.
+alloy-input-date-benefits-description=since it combines date selection, text input, and automatic [javadoc:java.util.Date] conversion in a single component. The only advantage of using [vdldoc:alloy:pickDate] is that it can be associated with an [vdldoc:alloy:inputTextarea] in order to select *multiple dates*.
 alloy-inputdate=[javadoc:com.liferay.faces.alloy.component.inputdate.InputDate] is a [javadoc:javax.faces.component.UIInput] component that renders a textbox and a popup a calendar with selectable dates. The component attepts to automatically convert the submitted value to a [javadoc:java.util.Date] via a built in [javadoc:javax.faces.convert.DateTimeConverter].
 alloy-inputdate-date-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:inputDate:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
 alloy-inputdate-general=The [vdldoc:alloy:inputDate:showOn] attribute specifies which events will popup the calendar.
@@ -97,7 +97,7 @@ alloy-pickdate-localization-example-1=Hard coded Brazilian Portuguese locale
 alloy-pickdate-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
 alloy-pickdate-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:alloy:pickDate:minimumDate] and [vdldoc:alloy:pickDate:maximumDate] attributes.
 alloy-pickdate-multiple-panes=The number of month *panes* that are displayed can be specified via the [vdldoc:alloy:pickDate:panes] attribute (maximum of 3).
-alloy-pickdate-multiple-selection=The *date selection mode* can be specified via the [vdldoc:alloy:pickDate:selectionMode] attribute. Valid values include "single" (the default), "multiple," or "multiple-sticky." The character(s) separating the selected dates can be specified via the [vdldoc:alloy:pickDate:dateSeparator] attribute.
+alloy-pickdate-multiple-selection=The *date selection mode* can be specified via the [vdldoc:alloy:pickDate:selectionMode] attribute. Valid values include `single` (the default), `multiple,` or `multiple-sticky`. The character(s) separating the selected dates can be specified via the [vdldoc:alloy:pickDate:dateSeparator] attribute.
 alloy-pickdate-multiple-selection-example-1=Hold down shift or control to select multiple dates
 alloy-pickdate-multiple-selection-example-2=Pop up the pickDate multiple times to select multiple dates
 alloy-row=[javadoc:com.liferay.faces.alloy.component.row.Row] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags.
@@ -175,6 +175,7 @@ multiple-panes=Multiple Panes
 multiple-selection=Multiple Selection
 navigation=Navigation
 note=Note
+note-multiple-selection-not-available-for-inputdate=*Note:* Multiple selection is not available for [vdldoc:alloy:inputDate].
 param=Param
 parameter-value=Parameter Value
 please-consider-using=Please consider using
